<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- Le menu de consultation des Data -->
    
    <item android:id="@+id/menu_consultation"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_consultation"
        android:showAsAction="ifRoom|withText"
     >
             <menu android:id="@+id/sousmenu_consultation">
					 <item android:id="@+id/consulter_images"
					       android:title="@string/sousmenu_consulter_images"/>	
				 
					 <item android:id="@+id/consulter_videos"
					       android:title="@string/sousmenu_consulter_videos"/>
				 	 
				 	 <item android:id="@+id/consulter_sons"
					       android:title="@string/sousmenu_consulter_sons"/>
					 	 
			 	 	 <item android:id="@+id/consulter_video"
					       android:title="@string/sousmenu_consulter_notes"/>
		     </menu>
        
    </item>
    
    <!-- Le menu de partage des Data -->
    
     <item android:id="@+id/menu_partage"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_partager"
        android:showAsAction="ifRoom|withText"
     >
            <menu android:id="@+id/sousmenu_partager">
             
					 <item android:id="@+id/partager_images"
					       android:title="@string/sousmenu_partager_images"/>	
				 
					 <item android:id="@+id/partager_videos"
					       android:title="@string/sousmenu_partager_videos"/>
					 
					 <item android:id="@+id/partager_sons"
					       android:title="@string/sousmenu_partager_sons"/>
					 
					 <item android:id="@+id/partager_notes"
					       android:title="@string/sousmenu_partager_notes"/>
					 
	        </menu>
     </item>
     
     <!-- Le menu de parametrage Android -->
     <item android:id="@+id/menu_item_show_subtitle"
        android:title="@string/quitter_cgi_pc"
        android:showAsAction="never"
     >
         
     </item>
</menu>
