<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <RadioGroup
        android:id="@+id/data_Bord_group_bouton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <RadioButton
            android:id="@+id/radioPhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_photos"  />
 
        <RadioButton
            android:id="@+id/radioNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_notes" />
        
         <RadioButton
            android:id="@+id/radioSons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_sons" />
         
           <RadioButton
            android:id="@+id/radioVideos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_videos" />
 
    </RadioGroup>
    
    
</LinearLayout>