<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  >
									
	
		    		
						
						      
						      
													      <TextView
													        android:layout_width="match_parent"
													        android:layout_height="wrap_content"
													        android:text="@string/board_titre_label"
													        style="?android:listSeparatorTextViewStyle"
													        />
													      <EditText android:id="@+id/board_titre"
													        android:layout_width="match_parent"
													        android:layout_height="wrap_content"
													        android:layout_marginRight="16dp"
													        android:hint="@string/board_titre_hint"
													        />
												
													      
														    <TextView
																    android:layout_width="match_parent"
																    android:layout_height="wrap_content"
																    android:text="@string/board_description_label"
																    style="?android:listSeparatorTextViewStyle"
																    android:layout_marginRight="16dp"
														    />
														    
														      <EditText android:id="@+id/board_description_champ"
														        android:layout_width="match_parent"
														        android:layout_height="wrap_content"
														        android:layout_marginRight="16dp"
														        android:hint="@string/board_description_champ"
														        />
										   
										
					  
						
<!-- 		<LinearLayout
					    android:layout_height="wrap_content"
					    android:layout_marginLeft="75dp"
					    android:layout_marginRight="16dp" 
					    android:layout_gravity="center_horizontal"
				        android:layout_weight="1"
				        android:textColor="#DB1702"
				        android:textStyle="italic" >
		    
					    <Button
					        android:id="@+id/board_enregistrer_bouton"
					        android:layout_width=wrap_content
					        android:layout_height="wrap_content"
					        android:layout_marginLeft="16dp"
                            android:layout_marginRight="25dp"
                            android:layout_weight="0.19"
                            android:gravity="center"
					        android:layout_weight="1"
				
					        android:gravity="center" 
					        android:text="@string/board_enregistrer_bouton"
					        android:layout_marginLeft="75dp"
					        android:layout_marginRight="16dp"
					        android:shadowDx="1"
					        android:shadowDy="1"
					        android:shadowRadius="2"
					        android:shadowColor="#000000"
					        android:textColor="#DB1702"
                            android:textStyle="italic"/>
					    <Button
					        android:id="@+id/board_annuler_bouton"
					        android:layout_width="fill_parent"
					        android:layout_height="wrap_content"
					        android:layout_weight="1"
					        android:textColor="#ffffff"
					        android:gravity="center" 
					        android:text="@string/board_annuler_bouton"
					        android:layout_marginLeft="75dp"
					        android:layout_marginRight="16dp" 
					        android:textStyle="bold"
					        android:shadowDx="1"
					        android:shadowDy="1"
					        android:shadowRadius="2"
					        android:shadowColor="#000000"/>							    
		</LinearLayout> -->
		
		 <LinearLayout
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textColor="#DB1702"
        android:textStyle="italic" >

        <Button
            android:id="@+id/board_enregistrer_bouton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="25dp"
            android:layout_weight="0.19"
            android:gravity="center"
            android:minHeight="25dp"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/board_enregistrer_bouton"
            android:textColor="#DB1702"
            android:textStyle="italic" />

        <Button
            android:id="@+id/board_annuler_bouton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.19"
            android:gravity="center"
             android:minHeight="25dp"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/board_annuler_bouton"
            android:textColor="#DB1702"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>



