<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scrollbar_shape_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp" >
    
			<LinearLayout 
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:orientation="vertical"
			  android:scrollbars="vertical"
			  >
			  <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="75dp"
			    android:layout_marginRight="16dp" >
			      
			
			
			    <TextView
			        android:id="@+id/libelle_board"
			        android:layout_width="128dp"
			        android:layout_height="match_parent"
			          android:layout_marginLeft="25dp"
			            android:layout_marginRight="25dp"
			            android:textColor="#DB1702"
			            android:textStyle="italic" 
			        android:text="@string/titre_board" />
			      
			  </LinearLayout>
			    
			 
			
			  <LinearLayout 
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:orientation="vertical"
			      android:layout_weight="1"
			    >
			      
			  </LinearLayout>
			    
			    
			  <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="16dp"
			    android:layout_marginTop="16dp"
			    >
			    <LinearLayout
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:orientation="vertical"
			      android:layout_marginRight="4dp"
			      >
			      
			        
			        <ImageView android:id="@+id/photo_previsualisation"
			        android:layout_width="80dp"
			        android:layout_height="80dp"
			        android:scaleType="centerInside"
			        android:background="@android:color/darker_gray"
			        android:cropToPadding="true"/>
			        
			        
			      <ImageButton android:id="@+id/crime_imageButton"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:src="@android:drawable/ic_menu_camera"
			        />     
			    </LinearLayout>
			    <LinearLayout
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:orientation="vertical"
			      android:layout_weight="1"
			      >
			      <TextView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/crime_title_label"
			        style="?android:listSeparatorTextViewStyle"
			        />
			      <EditText android:id="@+id/crime_title"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginRight="16dp"
			        android:hint="@string/crime_title_hint"
			        />
			    </LinearLayout>
			  </LinearLayout>
			  <TextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/crime_details_label"
			    style="?android:listSeparatorTextViewStyle"
			    />
			
			      <EditText android:id="@+id/data_description_champ"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginRight="16dp"
			        android:layout_marginLeft="75dp"
			        android:hint="@string/data_description_champ"
			        android:inputType="textMultiLine"
			        android:lines="3" />
			
							  <LinearLayout
							    android:layout_width="match_parent"
							    android:layout_height="wrap_content"
							    android:layout_marginLeft="75dp"
							    android:layout_marginRight="16dp" 
							    android:orientation="vertical">
							    
							       
								   
											      <CheckBox
											        android:id="@+id/crime_solved"
											        android:layout_width="wrap_content"
											        android:layout_height="wrap_content"
											        android:layout_weight="1"
											        android:text="@string/crime_solved_label" />
											      
											      
														     <LinearLayout
															        android:layout_width="match_parent"
															        android:layout_height="wrap_content"
															        android:layout_marginLeft="0dp"
															        android:layout_marginRight="1dp"
															        android:layout_gravity="center_horizontal"
															        android:layout_weight="1"
															        android:textColor="#DB1702"
															        android:textStyle="italic" >    
										      
														           				 <TextView
																      		  	          android:id="@+id/affiche_date_prise_photo"
																      		  	          android:layout_width="274dp"
																      		  	          android:layout_height="match_parent"
																      		  	          android:layout_marginLeft="16dp"
																      		  	          android:layout_marginRight="3dp"
																      		  	          android:text=""
																      		  	          android:textColor="#DB1702"
																      		  	          android:textStyle="italic" />
														           
																		           <ImageButton android:id="@+id/boutonDateCaledar"
																			               android:layout_width="32dp"
																			               android:layout_height="29dp"
																			               android:focusable="true" 
																			               android:background="@drawable/calendar"></ImageButton>
														
																			<!-- 	      <Button
																				          android:id="@+id/crime_date"
																				          android:layout_width="match_parent"
																				          android:layout_height="wrap_content"
																				          android:gravity="center"
																				          android:textColor="#DB1702"
																				          android:textStyle="italic" /> -->
														   </LinearLayout>
										            
							  </LinearLayout>
			    
							    <LinearLayout
							        android:layout_width="match_parent"
							        android:layout_height="wrap_content"
								    android:layout_marginLeft="0dp"
							        android:layout_marginRight="0dp" 
							        android:layout_gravity="center_horizontal"
							        android:layout_weight="1"
							        android:textColor="#DB1702"
							        android:textStyle="italic" >
							
							        <Button
							            android:id="@+id/photo_enregistrer_bouton"
							            android:layout_width="wrap_content"
							            android:layout_height="wrap_content"
							            android:layout_marginLeft="25dp"
							            android:layout_marginRight="5dp"
							            android:layout_weight="0.19"
							            android:gravity="center"
							            android:minHeight="25dp"
							            android:shadowColor="#000000"
							            android:shadowDx="1"
							            android:shadowDy="1"
							            android:shadowRadius="2"
							            android:text="@string/board_enregistrer_bouton"
							            android:textColor="#DB1702"
							            android:textStyle="italic" />
							
							        <Button
							            android:id="@+id/photo_annuler_bouton"
							            android:layout_width="wrap_content"
							            android:layout_height="wrap_content"
							            android:layout_marginLeft="1dp"
							            android:layout_marginRight="5dp"
							            android:layout_weight="0.19"
							            android:gravity="center"
							             android:minHeight="25dp"
							            android:shadowColor="#000000"
							            android:shadowDx="1"
							            android:shadowDy="1"
							            android:shadowRadius="2"
							            android:text="@string/board_annuler_bouton"
							            android:textColor="#DB1702"
							            android:textStyle="italic" />
							
							    </LinearLayout>
	
			</LinearLayout>

</ScrollView>

